tests/success/functions.moc
asm("
    CALL (LB) f_main   ; call to the entry point of the program
    HALT               ; stop the machine
")

void f1(int p) {
}

int f2(int x, int y) {
    return x * x + y * y;
}

void main() {
    f1(1);
    f2(1, 2);
}
