tests/error/locals-2.moc
int main() {
    return x + 1;
}
